# App-Scan-AI

./: README.md  pyproject.toml
app-scan-ai/: data.py  machine_learning.py  main.py  ui_init.py  ui_main.py  ui_tabs.py
